--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body{
     padding: 0px;
 }
 .main{
-    width: 1200px;
+    width: 100%;
     height: 100%;
     background: white;
     float: left;
@@ -75,6 +75,7 @@ body{
     font-weight: 700;
     font-size: 40px;
     line-height: 60px;
+    color: #07043B;
 }
 .main::after{
     content: "Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family and co-workers.";
@@ -123,4 +124,147 @@ body{
     cursor: pointer;
     transition: 0.7s;
 }
-
+.center{
+    position: relative;
+    width: 100%;
+    height: 850px;
+    top: 820.5px;
+}
+.center .back{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    overflow: hidden;
+}
+.center .photo{
+    position: absolute;
+    left: 770px;
+    top: 210px;
+    z-index: 2;
+}
+.text{
+    position: absolute;
+    top: 188px;
+    left: 80px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #07043B;
+}
+.text1{
+    width: 529px;
+    height: 48px;
+    color: #07043B;
+    position: absolute;
+    z-index: 3;
+    left: 80px;
+    top: 268px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 24px;
+}
+.text2{
+    width: 529px;
+    height: 48px;
+    color: #07043B;
+    position: absolute;
+    z-index: 4;
+    left: 80px;
+    top: 348px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+}
+.green{
+    position: absolute;
+    left: 80px;
+    top: 407.5px;
+    width: 146px;
+    height: 22px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+    color: #3DA08F;
+    border-bottom: 2px solid #3DA08F;
+}
+.green i{
+    position: absolute;
+    left: 138px;
+    top: 4px;
+}
+.green:hover{
+    cursor: pointer;
+}
+.border{
+    width: 356px;    
+    height: 215px;
+    border: 0px solid black;
+    position: relative;
+    z-index: 5;
+    left: 80px;
+    top: 479.5px;
+    box-shadow: 0px 0px 10px 5px rgba(56, 56, 56, 0.0458843);
+    border-radius: 5px;
+}
+.square{
+    position: absolute;
+    width: 280px;
+    height: 92px;
+    left: 33px;
+    top: 49px;
+    color: #07043B;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 23px;
+    /* or 177% */
+    letter-spacing: 0.5px;
+}
+.border i{
+    position: absolute;
+    left: 33px;
+    top: 20px;
+}
+.border img{
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    left: 33px;
+    top: 157px;
+}
+.name{
+    position: absolute;
+    left: 73px;
+    top: 159px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 15px;
+    /* identical to box height */
+    letter-spacing: 0.55px;
+    color: #07043B;
+}
+.job{
+    position: absolute;
+    left: 73px;
+    top: 174px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 15px;
+    /* identical to box height, or 188% */
+    letter-spacing: 0.4px;
+    color: #07043B;
+}
